Setting up primary & secondary navigation

--- a/src/primary2.html
+++ b/src/primary2.html
@@ -1,5 +1,5 @@
 <template>
-  <h1>Primary Navigation</h1>
+  <h2>Primary 2</h2>
   <ul>
     <li repeat.for="row of router.navigation">
       <a class="${row.isActive ? 'active' : ''}" href.bind="row.href">${row.title}</a>
