--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <template>
-  <h1>Primary Navigation</h1>
+  <h1>Root Navigation</h1>
   <ul>
     <li repeat.for="row of router.navigation">
       <a class="${row.isActive ? 'active' : ''}" href.bind="row.href">${row.title}</a>
