--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,7 @@
 <template>
+  <style>
+    .active { font-weight: bold; }
+  </style>
   <h1>Root Navigation</h1>
   <ul>
     <li repeat.for="row of router.navigation">
