--- a/src/secondary2.html
+++ b/src/secondary2.html
@@ -1,13 +1,14 @@
 <template>
   <h3>Secondary 2</h3>
-  <!--<button click.bind="addItem">Add Item</button>-->
+  <button click.trigger="addItem()">Add Item</button>
   <h4>Items</h4>
   <ul>
     <li repeat.for="item of items">
-      ${item.description}
-      <!--<a class="${item == $parent.currentItem ? 'active' : ''}" href.bind="row.href">${item.description}</a>-->
+      <a class="${item == $parent.currentItem ? 'active' : ''}" route-href="route: item; params.bind: {id:item.id}">
+        ${item.description}
+      </a>
     </li>
   </ul>
   <hr>
-  <!--<router-view></router-view>-->
+  <router-view></router-view>
 </template>
