--- a/src/secondary2.html
+++ b/src/secondary2.html
@@ -1,10 +1,13 @@
 <template>
+  <style>
+    .active { font-weight: bold; }
+  </style>
   <h3>Secondary 2</h3>
   <button click.trigger="addItem()">Add Item</button>
   <h4>Items</h4>
   <ul>
     <li repeat.for="item of items">
-      <a class="${item == $parent.currentItem ? 'active' : ''}" route-href="route: item; params.bind: {id:item.id}">
+      <a class="${item == currentItem ? 'active' : ''}" route-href="route: item; params.bind: {id:item.id}">
         ${item.description}
       </a>
     </li>
